fix: prose overflow

--- a/src/css/prose.css
+++ b/src/css/prose.css
@@ -1,5 +1,5 @@
 .prose {
-  @apply text-zinc-600 leading-loose relative;
+  @apply text-zinc-600 leading-loose relative overflow-hidden;
   word-break: break-word;
 }
 
